# FlappyBird

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/shaders/: standard.frag  standard.frag.spv  standard.json  standard.vert  standard.vert.spv  template.json
src/: main.cpp
src/context/: render.cpp  render.hpp
src/io/: file.cpp  file.hpp
src/render/: pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp
src/window/: swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
